--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -30,7 +30,7 @@ jobs:
       run: pip install build
         
     - name: Build wheel file
-      run: python build bdist_wheel
+      run: python -m build
       
     - name: Push wheel file to repository
       run: |
