--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -12,12 +12,12 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Get Git user info
+    - name: Set Git user info
       run: |
-        GIT_USER_NAME=$(git config --global user.name)
-        GIT_USER_EMAIL=$(git config --global user.email)
-        echo "GIT_USER_NAME=${GIT_USER_NAME}" >> $GITHUB_ENV
-        echo "GIT_USER_EMAIL=${GIT_USER_EMAIL}" >> $GITHUB_ENV  
+        git config --global user.name "${{ secrets.GIT_USER_NAME }}"
+        git config --global user.email "${{ secrets.GIT_USER_EMAIL }}"
+        echo "GIT_USER_NAME=${{ secrets.GIT_USER_NAME }}" >> $GITHUB_ENV
+        echo "GIT_USER_EMAIL=${{ secrets.GIT_USER_EMAIL }}" >> $GITHUB_ENV  
     
     - name: Set up Python
       uses: actions/setup-python@v4
