--- a/.github/workflows/build-and-publish.yml
+++ b/.github/workflows/build-and-publish.yml
@@ -32,7 +32,7 @@ jobs:
       
     - name: Set Berlin time
       id: berlin_time
-      run: echo "::set-env name=BERLIN_TIME::$(TZ='Europe/Berlin' date +'%Y-%m-%d %H:%M:%S')"
+      run: echo "$(TZ='Europe/Berlin' date +'%Y-%m-%d %H:%M:%S')" >> $GITHUB_ENV
       
     - name: Push wheel file to repository
       run: |
